# SCI-SilentOT

./: .gitignore  CMakeLists.txt  README.md
cmake/: SCIConfig.cmake
scripts/: build-deps.sh  common.sh
src/: CMakeLists.txt
src/BuildingBlocks/: aux-protocols.cpp  aux-protocols.h
src/FloatingPoint/: CMakeLists.txt  bool-data.cpp  bool-data.h  fixed-point.cpp  fixed-point.h
src/LinearHE/: CMakeLists.txt  utils-FHE.cpp  utils-FHE.h
src/LinearOT/: CMakeLists.txt  linear-ot.cpp
src/OT/: CMakeLists.txt  cheetah-ot_pack.h  co.h  ot_pack.h
src/OT/ferret/: silent_ot.h
src/utils/: constants.h  mitccrh.h  net_io_channel.h
tests/: CMakeLists.txt  test_fixed_primitive.cpp  test_ring_aux_protocols.cpp  test_ring_hadamard_product.cpp  test_ring_matmul.cpp
