# include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../src/")
# include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../include/")

macro (add_test_OT _name)
	add_executable(${_name}-OT "test_ring_${_name}.cpp")
    target_link_libraries(${_name}-OT gemini SCI-Cheetah)
    target_compile_definitions(${_name}-OT PUBLIC SCI_OT=1 USE_CHEETAH=1) 
endmacro() 

# macro (add_test_HE _name)
#     add_executable(${_name}-HE "test_field_${_name}.cpp")
#     target_link_libraries(${_name}-HE gemini SCI-HE)
# endmacro()

add_test_OT(hadamard_product)
add_test_OT(matmul)
# add_test_OT(value_extension)
# add_test_OT(truncation)
# add_test_OT(exp)
# add_test_OT(sigmoid)
# add_test_OT(relu)
# add_test_OT(argmax)
# add_test_OT(tanh)
# add_test_OT(sqrt)
add_test_OT(aux_protocols)
# add_test_OT(maxpool)

# add_test_HE(relu)
# add_test_HE(maxpool)
# add_test_HE(argmax)
# add_test_HE(conv)
# add_test_HE(fc)
# add_test_HE(elemwise_prod)
# add_test_HE(truncation)

add_executable(fixed-primitive "test_fixed_primitive.cpp")
target_link_libraries(fixed-primitive gemini SCI-Cheetah)
target_compile_definitions(fixed-primitive PUBLIC SCI_OT=1 USE_CHEETAH=1)
